Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • gtk gtk
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,553
    • Issues 1,553
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 218
    • Merge requests 218
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • gtkgtk
  • Issues
  • #5059
Closed
Open
Issue created Mar 06, 2022 by nagisa@nagisa

SIGSEGV when a wrong password is supplied when mounting a smb share

Affected version

  • Nightly flatpak: Can't test it because flatpak is not readily usable on my system
  • Other: 41.2

Steps to reproduce

  1. Ctrl+L, smb://somesrv/someshare
  2. Enter wrong password, click enter while the password field is still focused

Current behavior

Files crashes with a SIGSEGV

#0  0x00007f3e55406735 in gtk_widget_set_sensitive () from /nix/store/38s9harni8shwjfl4m4x1z94niz6cqj7-gtk+3-3.24.31/lib/libgtk-3.so.0
#1  0x00007f3e552c8a56 in pw_dialog_anonymous_toggled () from /nix/store/38s9harni8shwjfl4m4x1z94niz6cqj7-gtk+3-3.24.31/lib/libgtk-3.so.0
#2  0x00007f3e54b63879 in _g_closure_invoke_va () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgobject-2.0.so.0
#3  0x00007f3e54b7bd2b in g_signal_emit_valist () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgobject-2.0.so.0
#4  0x00007f3e54b7bfbf in g_signal_emit () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgobject-2.0.so.0
#5  0x00007f3e552c8339 in gtk_mount_operation_ask_password () from /nix/store/38s9harni8shwjfl4m4x1z94niz6cqj7-gtk+3-3.24.31/lib/libgtk-3.so.0
#6  0x00007f3e54c30265 in _g_cclosure_marshal_VOID__STRING_STRING_STRING_FLAGSv () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgio-2.0.so.0
#7  0x00007f3e54b63879 in _g_closure_invoke_va () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgobject-2.0.so.0
#8  0x00007f3e54b7bd2b in g_signal_emit_valist () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgobject-2.0.so.0
#9  0x00007f3e54b7c1df in g_signal_emit_by_name () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgobject-2.0.so.0
#10 0x00007f3e50b7662d in handle_ask_password () from /nix/store/dp5589g7lmckjczhakyp37zc1ghmiayb-gvfs-1.48.1/lib/gvfs/libgvfscommon.so
#11 0x00007f3e53c1286a in ffi_call_unix64 () from /nix/store/5kmd81rnn4i8a9pd0z6hcv5skyd9hxfd-libffi-3.4.2/lib/libffi.so.8
#12 0x00007f3e53c119c2 in ffi_call_int () from /nix/store/5kmd81rnn4i8a9pd0z6hcv5skyd9hxfd-libffi-3.4.2/lib/libffi.so.8
#13 0x00007f3e54b63e5c in g_cclosure_marshal_generic () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgobject-2.0.so.0
#14 0x00007f3e54b6364f in g_closure_invoke () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgobject-2.0.so.0
#15 0x00007f3e54b7537b in signal_emit_unlocked_R.isra.0 () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgobject-2.0.so.0
#16 0x00007f3e50b6daac in _gvfs_dbus_mount_operation_skeleton_handle_method_call () from /nix/store/dp5589g7lmckjczhakyp37zc1ghmiayb-gvfs-1.48.1/lib/gvfs/libgvfscommon.so
#17 0x00007f3e54cce199 in g_dbus_interface_method_dispatch_helper () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgio-2.0.so.0
#18 0x00007f3e54cb43dd in call_in_idle_cb () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgio-2.0.so.0
#19 0x00007f3e558d3a0f in g_main_context_dispatch () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libglib-2.0.so.0
#20 0x00007f3e558d3db8 in g_main_context_iterate.constprop () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libglib-2.0.so.0
#21 0x00007f3e558d3e6f in g_main_context_iteration () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libglib-2.0.so.0
#22 0x00007f3e54c89485 in g_application_run () from /nix/store/sxzai36pf2sk7dxwpk9hn1gqn94k4646-glib-2.70.2/lib/libgio-2.0.so.0
#23 0x000000000042e837 in main ()

Expected behavior

Files shouldn't crash

Additional information

Assignee
Assign to
Time tracking